<resources>
    <string name="app_name">Homework1</string>
    <string name="calculate_button">Calculate</string>
    <string name="value_1">Value 1 :</string>
    <string name="value_2">Value 2 :</string>
    <string name="operation">Choose Operation</string>
    <string name="display_answer">   </string>
    <string name="set_text_string">Make sure that input Values are not empty</string>
    <string-array name = "functions_array">
            <item>+</item>
            <item>-</item>
            <item>x</item>
            <item>/</item>
    </string-array>

</resources>
