<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="180dp"
        android:text="@string/calculate_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="154dp" />

    <Spinner
        android:id="@+id/operation"
        android:layout_width="76dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-28dp"
        android:layout_marginTop="128dp"
        android:layout_toEndOf="@+id/button_calculate"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_calculate"
        android:ems="10"
        android:inputType="numberSigned"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="3dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:layout_toEndOf="@+id/button_calculate"
        android:ems="10"
        android:inputType="numberSigned"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignStart="@+id/textView6"
        android:text="@string/value_1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:text="@string/value_2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="135dp"
        android:text="@string/operation"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/button_calculate"
        android:layout_toEndOf="@+id/button_calculate"
        android:text="@string/display_answer"
        android:textStyle="bold" />

</RelativeLayout>